clusters/hive/apps/wger/k8s-manifests/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: wger
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: postgres
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - env:
            - name: POSTGRES_DB
              value: wger
            - name: POSTGRES_USER
              value: wger
            # - name: PGDATA
            #   value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_PASSWORD
                  name: postgres
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              memory: 200Mi
          image: postgres:18.0
          name: postgres
          volumeMounts:
            # - mountPath: /var/lib/postgresql/data/
            - mountPath: /var/lib/postgresql
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres
