clusters/hive/apps/wger/k8s-manifests/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: wger
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: redis
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 50Mi
          image: redis:8.0.3
          name: redis
          volumeMounts:
            - mountPath: /data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis
