clusters/hive/apps/wger/k8s-manifests/wger-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wger
  namespace: wger
  labels:
    app: wger
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: wger
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wger
    spec:
      containers:
        - image: wger/server:2.4-dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
          name: wger
          volumeMounts:
            - mountPath: /static
              name: wger-static
            - mountPath: /media
              name: wger-media
      restartPolicy: Always
      volumes:
        - name: wger-static
          persistentVolumeClaim:
            claimName: wger-static
        - name: wger-media
          persistentVolumeClaim:
            claimName: wger-media
