clusters/hive/apps/wger/k8s-manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wger
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
  sessionAffinity: None
  type: ClusterIP
