clusters/hive/apps/wger/k8s-manifests/wger-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wger
  namespace: wger
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: "traefik"
  rules:
    - host: sport.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: wger
                port:
                  number: 8000
            path: /
            pathType: Prefix
